<resources>
    <string name="app_name">Qtend</string>
    <string name="username">Username</string>
    <string name="qtend">Qtend</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="forgetpassword">forget password</string>
    <string name="signup">Sign Up</string>
    <string name="asamember">As a new mamber</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="username2">Username</string>
    <string name="conditionregister">*minimum 8 characters, maximum 12 character, must include 1 UPPERCASE and numeric value.</string>
    <string name="usernamer">Username</string>
    <string name="designation">Designation</string>
    <string name="fullname">Fullname</string>
    <string name="qtend2">Qtend</string>
    <string name="signupr">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="passwordr">Password</string>
    <string name="signuprb">Sign Up</string>
    <string name="employeedetails">Employee Details</string>
    <string name="update1">Update</string>
    <string name="emp025">EMP025</string>
    <string name="namejohn">Name : John Arker</string>
    <string name="designationsoftware">Designation : Software Engineer</string>
    <string name="emaild">"E-mail : "</string>
    <string name="mobiled">Mobile</string>
    <string name="john">john.a@yahoo.com</string>
    <string name="mobe">0785942587</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="signupr2">Sign Up</string>
    <string name="emailr">E-mail</string>
    <string name="phoner">Phone</string>
    <string name="passwordr2">Password</string>
    <string name="userid">User ID</string>
    <string name="f1">forget name</string>
    <string name="signup">Sign Up</string>
    <string name="fgtpswd">forget password</string>
    <string name="pswde">Password</string>
    <string name="emaile">E mail</string>
    <string name="phnee">Phone No</string>
    <string name="uname">Username</string>
    <string name="pswd">Password</string>
    <string name="logout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changePhoto">Change Photo</string>
</resources>