<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="352dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/conditionregister"
        android:textColor="#EF5350"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText5"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:hint="@string/usernamer"
        android:shadowColor="#F3EFEF"
        android:textColor="#FAF8F8"
        android:textColorHint="#FBFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText4"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:hint="@string/designation"
        android:shadowColor="#F3EFEF"
        android:textColor="#FAF8F8"
        android:textColorHint="#FBFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:hint="@string/fullname"
        android:shadowColor="#F3EFEF"
        android:textColor="#FAF8F8"
        android:textColorHint="#FBFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="101dp"
        android:background="#2196F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/qtend2"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F8F5F5"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="60dp"
        android:text="@string/signupr"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:ems="10"
        android:hint="@string/emailr"
        android:inputType="textEmailAddress"
        android:textColorHint="#F8F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:ems="10"
        android:hint="@string/phoner"
        android:inputType="phone"
        android:textColorHint="#FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:background="#26C6DA"
        android:ems="10"
        android:hint="@string/passwordr"
        android:inputType="textPassword"
        android:textColorHint="#F6F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/signupr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

</androidx.constraintlayout.widget.ConstraintLayout>